# model-agnostic-empirical-evaluation-of-test-driven-prompt-engineering

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  EXPERIMENT_GUIDE.md  Makefile  README.md  pyproject.toml
config/: rq1.py  rq2.py
datasets/: download_dataset.py  download_dataset_code_contest.py  visualize_code_contests.py
datasets/code_contests_visualizations/: dataset_summary_20250813_055151.json
docs/: README.md  index.html
docs/data/: leaderboard-data.js
docs/js/: app.js  data-manager.js  sort-indicator.js  stats-renderer.js  table-renderer.js  utils.js
experiment_runner/: __init__.py  cli.py  core.py  results.py  setup.py
llm_module/: __init__.py  config.py  main.py  response.json
prompt_module/: __init__.py  main.py  schema_contracts.py  strategies_interface.py
prompt_module/strategies/: default.py  python.py
rq1/: get_solution_setup.py  results_analyzer.py  run_all.py  test_solution_setup.py  write_results.py
rq1/human_eval_chatgpt4o/: get_solution.py  test_solution.py
rq1/human_eval_chatgpt4o_second_half/: get_solution.py  test_solution.py
rq1/human_eval_chatgpt4o_td/: get_solution.py  (+1 more)
rq2/: code_contests_difficulty_analyzer.py  get_solution_setup.py  results_analyzer.py  run_all.py  test_solution_setup.py  write_results.py
scripts/: delete_results_directories.py  merge_results.py  retry_error_generation.py  test_selected_tasks.py
solution_formatter_module/: __init__.py  main.py  strategies_interface.py
test_runner_module/: main.py  strategies_interface.py  summary_calculator.py  utils.py
(+1888 files in other folders)
